# kimura

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py  aes_gcm  cli.py  flow.md  flow.txt  mlkem  pyproject.toml  requirements.txt
benchmarks/: crypto.py  handshake.py  scalability.py  server.py  throughput.py  utils.py
cli/: cli.py
crypto/: aead.py  hash.py  kdf.py  keygen.py  mldsa.py  mlkem.py  signing.py
docs/: flow.md  pyproject.toml  requirements.txt
file_transfer/: bytes_conversion.py  chunking.py  transfer.py
include/pqc/: aes_gcm.hpp
keys/: client.pem  client_mldsa.pem  client_mlkem.pem  server.pem  server_mldsa.pem  server_mlkem.pem
peer/: initiator.py  peer.py  responder.py
protocol/: constants.py  fl_protocol.py  messages.py  sig_structure.py  state_machine.py
session/: __init__.py  client.py  manager.py  master.py  server.py  worker.py
src/crypto/: aes_gcm.cpp
tests/: test_replay.py
transport/: tcp.py
