cmake_minimum_required(VERSION 3.20)
project(pqc_secure_file_transfer LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
find_package(OpenSSL REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(OQS REQUIRED liboqs)
add_subdirectory(src/client)
add_subdirectory(src/crypto)
# etc
add_subdirectory(src/server)
add_subdirectory(src/common)
add_subdirectory(tests)
