# pyproject.toml

[build-system]
# Defines the build system; required by PEP 518
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc_secure_file_transfer"
version = "1.0.0"
description = "Post-Quantum Secure P2P File Transfer Framework using ML-KEM + AES-GCM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pqc", "post-quantum", "file transfer", "ml-kem", "aes-gcm", "crypto", "framework"]
authors = [
    { name = "Kevin Abraham Wilson", email = "kevinabrahamwilson8@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries"
]

# Project dependencies (minimum versions)
dependencies = [
    "asyncio==4.0.0",
    "cffi==2.0.0",
    "cryptography==46.0.3",
    "liboqs-python==0.14.0",
    "pycparser==2.23"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*", "benchmarks*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
