[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimura"
version = "0.1.0"
description = "PQC Networking for FL_Encrypt"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # liboqs-python already installed

[tool.setuptools.packages.find]
where = ["."]
include = ["kimura*"]

[tool.setuptools.package-dir]
"" = "."
